# FeedMe-rust

./: .appveyor.yml  .gitignore  Cargo.toml  README.md
feed/: Cargo.toml  HELP.txt
feed/src/: config.rs  error.rs  lib.rs  main.rs  uuid.rs
feed/src/rss/: feed.rs  helpers.rs  mod.rs  schema.rs  tags.rs  xml_utils.rs
manual/: Cargo.toml  HELP.txt
manual/src/: batch.rs  main.rs  meta.rs
shared/: Cargo.toml
shared/src/: error.rs  lib.rs  metadata.rs  uuid.rs
ytdlp/: Cargo.toml  HELP.txt
ytdlp/src/: error.rs  lib.rs  main.rs
ytdlp/src/ytdlp/: meta.rs  mod.rs
